--- a/Tak.Client/Tak.Client.csproj
+++ b/Tak.Client/Tak.Client.csproj
@@ -2,8 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<RootNamespace>TheBentern.Tak.Client</RootNamespace>
+	<ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
