--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,12 +88,13 @@ jobs:
       run: echo "version=$(./scripts/buildinfo.py short)" >> $GITHUB_OUTPUT
       id: version
 
+
     - name: Restore dependencies
       run: dotnet restore
     - name: Build solution and generate NuGet package
       run: | 
-        dotnet build -c Release -p:AssemblyVersion=${{ steps.version.outputs.version }} -p:Version=${{ steps.version.outputs.version }} -p:NuGetVersion=${{ steps.version.outputs.version }}
-        dotnet pack -c Release -p:AssemblyVersion=${{ steps.version.outputs.version }} -p:Version=${{ steps.version.outputs.version }} -p:NuGetVersion=${{ steps.version.outputs.version }}
+        dotnet build ./Tak.Client/Tak.Client.csproj -c Release -p:AssemblyVersion=${{ steps.version.outputs.version }} -p:Version=${{ steps.version.outputs.version }}
+        dotnet pack ./Tak.Client/Tak.Client.csproj -c Release -p:AssemblyVersion=${{ steps.version.outputs.version }} -p:Version=${{ steps.version.outputs.version }}
           
     - name: Publish package to nuget
       run: dotnet nuget push ./**/Tak.Client.*.nupkg --skip-duplicate --api-key ${{secrets.GITHUB_TOKEN}} --source "github"
