--- a/Tak.Client/Tak.Client.csproj
+++ b/Tak.Client/Tak.Client.csproj
@@ -5,8 +5,8 @@
     <RootNamespace>TheBentern.Tak.Client</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>../LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>../README.md</PackageReadmeFile>
     <PackageId>Tak.Client</PackageId>
     <Title>Tak.Client</Title>
     <IncludeSymbols>True</IncludeSymbols>
